Deprecate govuk-button--disabled class

--- a/src/govuk/components/button/_index.scss
+++ b/src/govuk/components/button/_index.scss
@@ -166,6 +166,8 @@ $govuk-button-text-colour: govuk-colour("white") !default;
     }
   }
 
+  // @deprecated Disabling buttons using the .govuk-button--disabled class is
+  // deprecated and will be removed in the next major version.
   .govuk-button--disabled,
   .govuk-button[disabled="disabled"],
   .govuk-button[disabled] {
