--- a/src/govuk/components/accordion/_index.scss
+++ b/src/govuk/components/accordion/_index.scss
@@ -155,7 +155,7 @@
       vertical-align: middle;
 
       // IE8 fallback of icon
-      @include govuk-if-ie8 {
+      @include _govuk-if-ie8 {
         display: inline-block;
         max-height: 20px;
         line-height: 1;
@@ -180,7 +180,7 @@
         border-right: govuk-px-to-rem(2px) solid;
 
         // IE8 fallback of icon with HTML symbol
-        @include govuk-if-ie8 {
+        @include _govuk-if-ie8 {
           content: "\25B2"; // "▲"
           position: relative;
           border: 0;
@@ -193,7 +193,7 @@
       transform: rotate(180deg);
 
       // IE8 fallback of arrow icon
-      @include govuk-if-ie8 {
+      @include _govuk-if-ie8 {
         &:after {
           content: "\25BC"; // "▼"
           transform: none;
