--- a/src/govuk/components/back-link/_index.scss
+++ b/src/govuk/components/back-link/_index.scss
@@ -67,7 +67,7 @@
     }
 
     // Fall back to a less than sign for IE8
-    @include govuk-if-ie8 {
+    @include _govuk-if-ie8 {
       content: "\003c"; // Less than sign (<)
       width: auto;
       height: auto;
