--- a/src/govuk/components/breadcrumbs/_index.scss
+++ b/src/govuk/components/breadcrumbs/_index.scss
@@ -89,7 +89,7 @@
       }
 
       // Fall back to a greater than sign for IE8
-      @include govuk-if-ie8 {
+      @include _govuk-if-ie8 {
         content: "\003e"; // Greater than sign (>)
         width: auto;
         height: auto;
