--- a/src/govuk/components/input/_index.scss
+++ b/src/govuk/components/input/_index.scss
@@ -33,7 +33,7 @@
       // here as it is already used for the yellow focus state.
       box-shadow: inset 0 0 0 $govuk-border-width-form-element;
 
-      @include govuk-if-ie8 {
+      @include _govuk-if-ie8 {
         // IE8 doesn't support `box-shadow` so double the border with
         // `border-width`.
         border-width: $govuk-border-width-form-element * 2;
@@ -163,7 +163,7 @@
       border-bottom: 0;
     }
     @include govuk-media-query($from: mobile) {
-      @include govuk-not-ie8 {
+      @include _govuk-not-ie8 {
         border-right: 0;
       }
     }
@@ -175,7 +175,7 @@
       border-top: 0;
     }
     @include govuk-media-query($from: mobile) {
-      @include govuk-not-ie8 {
+      @include _govuk-not-ie8 {
         border-left: 0;
       }
     }
