Deprecate IE8 settings, warn if set to non-default values

--- a/app/stylesheets/app-legacy-ie8.scss
+++ b/app/stylesheets/app-legacy-ie8.scss
@@ -10,7 +10,8 @@ $govuk-compatibility-govukelements: true;
 
 // Suppress compatibility mode deprecation warnings locally
 $govuk-suppressed-warnings: (
-  "compatibility-mode"
+  "compatibility-mode",
+  "ie8"
 );
 
 // Set Elements assets path
