--- a/src/govuk/components/exit-this-page/template.njk
+++ b/src/govuk/components/exit-this-page/template.njk
@@ -1,5 +1,5 @@
 {% from "../button/macro.njk" import govukButton %}
-{% set redirectUrl = params.redirectUrl | default() -%}
+{% set redirectUrl = params.redirectUrl | default("https://www.google.com") -%}
 
 <div
   {%- if params.id %} id="{{ params.id }}"{% endif %}
