--- a/packages/govuk-frontend-review/src/views/index.njk
+++ b/packages/govuk-frontend-review/src/views/index.njk
@@ -8,18 +8,21 @@
   <div class="govuk-grid-row">
 
     <div class="govuk-grid-column-one-third">
-      <h2 class="govuk-heading-m">Components</h2>
+      <h2 class="govuk-heading-l">Components</h2>
+      <h3 class="govuk-heading-m govuk-!-margin-bottom-2">All components</h3>
+      <p class="govuk-body"><a href="/components/all" class="govuk-link govuk-link--muted">View all components</a></p>
 
       <ul class="govuk-list">
-        <li><a href="/components/all" class="govuk-link">All</a></li>
-        {% for componentName in componentNames | sort %}
-          <li><a href="/components/{{ componentName }}" class="govuk-link">{{ componentName | replace("-", " ") | capitalize }}</a></li>
-        {% endfor %}
+      {% for componentName in componentNames | sort %}
+        <li><a href="/components/{{ componentName }}" class="govuk-link">{{ componentName | replace("-", " ") | capitalize }}</a></li>
+      {% endfor %}
       </ul>
     </div>
 
     <div class="govuk-grid-column-one-third">
-      <h2 class="govuk-heading-m">Examples</h2>
+      <h2 class="govuk-heading-l">Examples</h2>
+
+      <h3 class="govuk-heading-m govuk-!-margin-bottom-2">Other examples</h3>
 
       <ul class="govuk-list">
       {% for exampleName in exampleNames | sort %}
@@ -29,7 +32,8 @@
     </div>
 
     <div class="govuk-grid-column-one-third">
-      <h2 class="govuk-heading-m"><a href="/full-page-examples" class="govuk-link">Full page examples</a></h2>
+      <h2 class="govuk-heading-m govuk-!-margin-bottom-2">Full page examples</h2>
+      <p class="govuk-body"><a href="/full-page-examples" class="govuk-link govuk-link--muted">View all full page examples</a></p>
 
       <ul class="govuk-list">
       {% for example in fullPageExamples %}
