--- a/packages/govuk-frontend-review/src/views/index.njk
+++ b/packages/govuk-frontend-review/src/views/index.njk
@@ -19,27 +19,33 @@
       </ul>
     </div>
 
-    <div class="govuk-grid-column-one-third">
+    <div class="govuk-grid-column-two-thirds">
       <h2 class="govuk-heading-l">Examples</h2>
 
-      <h3 class="govuk-heading-m govuk-!-margin-bottom-2">Other examples</h3>
+      <div class="govuk-grid-row">
 
-      <ul class="govuk-list">
-      {% for exampleName in exampleNames | sort %}
-        <li><a href="/examples/{{ exampleName }}" class="govuk-link">{{ exampleName | replace("-", " ") | capitalize }}</a></li>
-      {% endfor %}
-      </ul>
-    </div>
+        <div class="govuk-grid-column-one-half">
+          <h3 class="govuk-heading-m govuk-!-margin-bottom-2">Other examples</h3>
 
-    <div class="govuk-grid-column-one-third">
-      <h2 class="govuk-heading-m govuk-!-margin-bottom-2">Full page examples</h2>
-      <p class="govuk-body"><a href="/full-page-examples" class="govuk-link govuk-link--muted">View all full page examples</a></p>
+          <ul class="govuk-list">
+          {% for exampleName in exampleNames | sort %}
+            <li><a href="/examples/{{ exampleName }}" class="govuk-link">{{ exampleName | replace("-", " ") | capitalize }}</a></li>
+          {% endfor %}
+          </ul>
+        </div>
 
-      <ul class="govuk-list">
-      {% for example in fullPageExamples %}
-        <li><a href="/full-page-examples/{{ example.path }}" class="govuk-link">{{ example.name | replace("-", " ") | capitalize }}</a></li>
-      {% endfor %}
-      </ul>
+        <div class="govuk-grid-column-one-half">
+          <h2 class="govuk-heading-m govuk-!-margin-bottom-2">Full page examples</h2>
+          <p class="govuk-body"><a href="/full-page-examples" class="govuk-link govuk-link--muted">View all full page examples</a></p>
+
+          <ul class="govuk-list">
+          {% for example in fullPageExamples %}
+            <li><a href="/full-page-examples/{{ example.path }}" class="govuk-link">{{ example.name | replace("-", " ") | capitalize }}</a></li>
+          {% endfor %}
+          </ul>
+        </div>
+
+      </div>
     </div>
 
   </div>
@@ -71,6 +77,5 @@
 
       </div>
     </div>
-
   </div>
 {% endblock %}
